fix(diff-view): avoid truncation in conflict section row label (#1449)

--- a/sass/editor/_editor-main.scss
+++ b/sass/editor/_editor-main.scss
@@ -10009,7 +10009,8 @@ strong {
 
                                                         > .content {
                                                             > .ui-label.name {
-                                                                width: 160px;
+                                                                white-space: normal;
+                                                                line-height: 1em;
                                                             }
 
                                                             .value {
